{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 26,
  "lineage": "71ba8d31-0690-2816-1f17-80c6d364ede2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f2ed97c1db0ea6e0",
            "owner_id": "378360623446",
            "tags": {
              "Name": "ig-main"
            },
            "vpc_id": "vpc-050cddc2866dcbf2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ig_route_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bbdfc794b2c5bab0",
            "owner_id": "378360623446",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2ed97c1db0ea6e0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-050cddc2866dcbf2f"
          },
          "dependencies": [
            "aws_internet_gateway.ig_main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ig_route_table_associate_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea3ea3b4ec02ae1",
            "route_table_id": "rtb-0bbdfc794b2c5bab0",
            "subnet_id": "subnet-08774400796d94b95"
          },
          "dependencies": [
            "aws_internet_gateway.ig_main",
            "aws_route_table.ig_route_main",
            "aws_subnet.main_public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ig_route_table_associate_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccdfc2add77e3423",
            "route_table_id": "rtb-0bbdfc794b2c5bab0",
            "subnet_id": "subnet-03892a6fc2249c195"
          },
          "dependencies": [
            "aws_internet_gateway.ig_main",
            "aws_route_table.ig_route_main",
            "aws_subnet.main_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:security-group/sg-0af9c9a8d6c431307",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af9c9a8d6c431307",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "378360623446",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-050cddc2866dcbf2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:subnet/subnet-08774400796d94b95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08774400796d94b95",
            "map_public_ip_on_launch": true,
            "owner_id": "378360623446",
            "tags": {
              "Name": "vpc-main-public-1"
            },
            "vpc_id": "vpc-050cddc2866dcbf2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:subnet/subnet-03892a6fc2249c195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03892a6fc2249c195",
            "map_public_ip_on_launch": true,
            "owner_id": "378360623446",
            "tags": {
              "Name": "vpc-main-public-2"
            },
            "vpc_id": "vpc-050cddc2866dcbf2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:vpc/vpc-050cddc2866dcbf2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08c8a8c8a1217ae69",
            "default_route_table_id": "rtb-08dc8a10ab9580178",
            "default_security_group_id": "sg-08c1c558dc703ccc1",
            "dhcp_options_id": "dopt-6d24340a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-050cddc2866dcbf2f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08dc8a10ab9580178",
            "owner_id": "378360623446",
            "tags": {
              "Name": "vpc-main"
            }
          }
        }
      ]
    }
  ]
}